--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -12,10 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1220.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "def tauxdevariation(fn, a, h):\n",
+    "    taux = (fn(a + h) - fn(a))/h\n",
+    "    return taux\n",
+    "\n",
+    "def fn(x):\n",
+    "    return 3*pow(x,3) + pow(x,2)- 5\n",
+    "\n",
+    "tauxdevariation(fn,10,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -28,10 +50,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-8-d310fdba49ef>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-d310fdba49ef>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return coef\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "def coefdirecteur(fn, a, b, p):\n",
+    "    coef = []\n",
+    "    for i in range(a,b,p):\n",
+    "        #coef.push\n",
+    "    return coef\n",
+    "\n",
+    "def fn(x):\n",
+    "    return (1+x)/(x/4)\n",
+    "\n",
+    "coefdirecteur(fn,0,1,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +89,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n",
+      "33\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculsuite(n, u0):\n",
+    "    uN = u0 + n + 1\n",
+    "    for i in range(10):\n",
+    "        uN = uN + n +1\n",
+    "        print(uN)\n",
+    "\n",
+    "def calcul_suite_recurence(n, uN):\n",
+    "    resp = uN + n + 1\n",
+    "    print(resp)\n",
+    "    return calcul_suite_recurence(n, resp)\n",
+    "\n",
+    "calculsuite(2 , 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +135,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tN(n):\n",
+    "    return pow(n,2) - pow((n - 1), 2)\n",
+    "\n",
+    "def sN(n):\n",
+    "    sn = 0\n",
+    "    for i in range(n):\n",
+    "        sn += tN(i)\n",
+    "    print(sn)\n",
+    "    return sn\n",
+    "\n",
+    "sN(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +182,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def deter(e, u0):\n",
+    "    b = 1;\n",
+    "    un = u0\n",
+    "    n = 0;\n",
+    "    while ( b == 1 ):\n",
+    "        un = uN(un)\n",
+    "        print(un)\n",
+    "        if(un < e):\n",
+    "            b = 0\n",
+    "        else:\n",
+    "            n+=1\n",
+    "\n",
+    "    return n;\n",
+    "\n",
+    "def uN(un):\n",
+    "    return 0.5*un\n",
+    "\n",
+    "deter(5, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +235,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9288888888888889\n"
+     ]
+    }
+   ],
+   "source": [
+    "def val_app(epsilon): \n",
+    "    elm1=1\n",
+    "    elm2=elm1-1/(3**2)\n",
+    "    signe=1\n",
+    "    val=5\n",
+    "    while abs(elm2-elm1)>epsilon:\n",
+    "       elm1=elm2\n",
+    "       elm2=elm1+signe*(1/(val**2))\n",
+    "       val+=2\n",
+    "       signe*=(-1)\n",
+    "    return elm2\n",
+    " \n",
+    "# tester la fonction\n",
+    "print(val_app(0.05))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,6 +275,39 @@
     "\n",
     "On arrête d’itérer quand l’intervalle entre 2 termes consécutifs devient strictement inférieur à epsilon."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.07875060343533\n"
+     ]
+    }
+   ],
+   "source": [
+    "def limite(epsilon):\n",
+    "    U0 = 2\n",
+    "    Un = U0+2/U0\n",
+    "    while abs(Un-U0) > epsilon:\n",
+    "        U0 = Un\n",
+    "        Un = U0+2/U0\n",
+    "    return Un\n",
+    " \n",
+    " \n",
+    "print(limite(0.05))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -129,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
